tests: make tests Java 8 compatible (for the thousandth time)